# manufactured-confidence

./: .gitignore  README.md  accessagent.py  backends.py  cascade.py  confidence.py  confound.py  cues.py  epistemic.py  extractor.py  forged.py  framing.py  harness.py  hearsay.py  plots.py  poison.py  prompt_fix.py  pyproject.toml  realagent.py  redundant.py  robust.py  run_grid.sh  sentences.py  staleness.py  symmetry.py  utility.py
data/: robust_t0.0_s1.jsonl  robust_t0.7_s5.jsonl  symmetry_t0.0_s1.jsonl
experiments/: accessagent.py  cascade.py  confidence.py  confound.py  confound_budget.py  cues.py  embed_probe.py  epistemic.py  extractor.py  forged.py  framing.py  hearsay.py  plots.py  poison.py  prompt_fix.py  realagent.py  redundant.py  robust.py  sentences.py  staleness.py  symmetry.py  trace_mine.py  utility.py  zep_probe.py
src/manufactured_confidence/: __init__.py  backends.py  harness.py
tests/: test_smoke.py
