[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-provenance"
version = "0.2.0"
description = "Provenance, not annotation: defending LLM agent memory. A poisoned or stale memory cascades confident-wrong; no annotation (passive tag or active distrust) gives selective trust, only preserving provenance does."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Alex Kwon", email = "ask@collapseindex.org" }]
dependencies = ["requests>=2.31", "anthropic>=0.40"]
