[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manufactured-confidence"
version = "0.3.0"
description = "Manufactured confidence: how memory products launder hearsay into authority. An LLM agent obeys the confidence of a carried claim, not its source; consolidating memory stores de-hedge hearsay into confident facts, and that manufactured confidence drives confident-wrong agent decisions."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Alex Kwon", email = "ask@collapseindex.org" }]
dependencies = ["requests>=2.31", "anthropic>=0.40"]
